# desktop-calendar

./: .gitignore  CHANGELOG.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: bump-version.ps1  git-push.ps1  release.ps1
src/: holidays.js  index.html  main.js  styles.css  weather-icons.js
src-tauri/: Cargo.toml  default.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
