[package]
name = "desktop-calendar"
version = "0.1.1"
description = "A desktop calendar widget"
authors = []
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-plugin-autostart = "2"

[dependencies]
tauri-plugin-fs = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
window-vibrancy = "0.5"
tauri-plugin-autostart = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

